--- a/package.json
+++ b/package.json
@@ -2,26 +2,18 @@
     "name": "flexbox-explorer",
     "version": "1.0.0",
     "description": "",
-    "scripts": {},
     "author": "wk-j",
     "license": "ISC",
+    "scripts": {
+        "start": "parcel src/index.html"
+    },
     "devDependencies": {
-        "@types/react": "^16.0.10",
-        "@types/react-dom": "^16.0.1",
-        "awesome-typescript-loader": "^3.2.3",
-        "copy-webpack-plugin": "^4.0.1",
-        "css-loader": "^0.28.5",
-        "file-loader": "^0.11.2",
-        "react": "^16.0.0",
-        "react-dom": "^16.0.0",
-        "react-dropzone": "^4.2.0",
-        "semantic-ui-css": "^2.2.12",
-        "source-map-loader": "^0.2.1",
-        "style-loader": "^0.18.2",
-        "styled-components": "^2.1.2",
-        "typescript": "^2.5.2",
-        "url-loader": "^0.5.9",
-        "webpack": "^3.6.0"
+        "@types/react": "^16.4.6",
+        "@types/react-dom": "^16.0.6",
+        "react": "^16.4.1",
+        "react-dom": "^16.4.1",
+        "styled-components": "^3.3.3",
+        "typescript": "^2.9.2"
     },
     "dependencies": {}
 }
