--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,19 @@
 {
     "compilerOptions": {
-        "experimentalDecorators": true,
+        "jsx": "react",
         "moduleResolution": "node",
         "module": "commonjs",
-        "target": "es2015",
-        "jsx": "react",
-        "sourceMap": true
-        //"allowJs": true,
-        // "noImplicitAny": false,
-        // "strictNullChecks": true
+        "target": "es5",
+        "lib": [
+            "dom",
+            "es6"
+        ],
+        "esModuleInterop": true,
+        "sourceMap": true,
+        "rootDir": "."
     },
     "exclude": [
-        "node_modules"
+        "node_modules",
+        ".vscode-test"
     ]
 }
