--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/react-dom": "^16.0.6",
         "react": "^16.4.1",
         "react-dom": "^16.4.1",
+        "semantic-ui-css": "^2.3.2",
         "styled-components": "^3.3.3",
         "typescript": "^2.9.2"
     },
